force-app/main/default/objects/ProdTechRef__c/ProdTechRef__c.object-meta.xml
<CustomObject>
    <label>Product Technical Reference</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Technical Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>