force-app/main/default/objects/ProdTechRef__c/fields/IsSKUKeyPart__c.field-meta.xml
<CustomField>
    <fullName>IsSKUKeyPart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SKU Part</label>
    <type>Checkbox</type>
</CustomField>