force-app/main/default/objects/ProdTechRef__c/fields/ITRef__c.field-meta.xml
<CustomField>
    <fullName>ITRef__c</fullName>
    <label>ITRef</label>
    <length>50</length>
    <type>Text</type>
</CustomField>