force-app/main/default/objects/ProdTechRef__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>ProdTechRef__c</referenceTo>
    <relationshipLabel>Products Technical Reference</relationshipLabel>
    <relationshipName>Products_Technical_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>