force-app/main/default/objects/ProdTechRef__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <label>ParentID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>